query results only return published objects, fix spacing between portfolio entries

--- a/app/javascript/packs/app/assets/stylesheets/application.scss
+++ b/app/javascript/packs/app/assets/stylesheets/application.scss
@@ -230,7 +230,7 @@ h3 {
         text-decoration: none;
     }
     .PortfolioList__item {
-        flex: 0 1 500px;
+        flex: 0 1 480px;
         margin: 15px 0px 15px 0px;
         cursor: pointer;
         border: 1px solid #aaa;
